--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ if (NOT WIN32)
 endif (NOT WIN32)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(SOURCES_FILES src/main.cpp)
+FILE(GLOB SOURCES_FILES src/*.cpp)
+FILE(GLOB INCLUDE_FILES include/*.hpp)
+INCLUDE_DIRECTORIES("./include")
 
-include_directories("./include")
-
-add_executable(Tyranosaurus_R ${SOURCES_FILES})
+add_executable(Tyranosaurus_R ${INCLUDE_FILES} ${SOURCES_FILES})
