--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(Tyrannosaurus_R)
+project(Tyrannosaurus-R)
 if (NOT WIN32)
     set (CMAKE_CXX_FLAGS "-Wall -Wextra -Werror")
 endif (NOT WIN32)
@@ -9,4 +9,4 @@ FILE(GLOB SOURCES_FILES src/*.cpp)
 FILE(GLOB INCLUDE_FILES include/*.hpp)
 INCLUDE_DIRECTORIES("include")
 
-add_executable(Tyrannosaurus_R ${INCLUDE_FILES} ${SOURCES_FILES})
+add_executable(pbrain-Tyrannosaurus-R ${INCLUDE_FILES} ${SOURCES_FILES})
